Fix notification item alignment

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -65,4 +65,5 @@ ul {
 .left-items {
   display: flex;
   gap: 16px;
+  align-items: center;
 }
